# cursorverse-tauri

./: .gitignore  AI_AGENT_ARCHITECTURE.md  AI_AGENT_SETUP.md  AI_ASSISTANT_IMPROVEMENTS.md  AI_ASSISTANT_README.md  ALASTOR_SETUP.md  BEST_PRACTICES.md  BUILD_INSTALLER.md  BUILD_INSTRUCTIONS.md  CURSOR_SIZE_CONTROL.md  Cargo.toml  DESKTOP_PETS_README.md  DISCORD_RPC_FIX.md  DISCORD_RPC_SETUP.md  DPET_INTEGRATION.md  DPET_QUICKSTART.md  DPET_README.md  FILE_MANIFEST.md  FIXES_COMPLETE.md  FIXES_COMPLETED_LUCY_2.0.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KODA_TTS_INTEGRATION.md  LM_STUDIO_SETUP.md  LUCY_ACTIVATION.md  LUCY_AI_INTEGRATION.md  LUCY_AI_README.md  LUCY_AI_UPGRADE.md  LUCY_COMPLETE.md  LUCY_QUICKSTART.md  LUCY_QUICK_SETUP.md  LUCY_UPDATE_2.0.md  LUCY_UPDATE_SUMMARY.md  LUCY_VISUAL_GUIDE.md  MICROPHONE_GUIDE.md  MICROPHONE_SETUP.md  PETS_QUICK_REFERENCE.md  PETS_TECHNICAL_DOCS.md  PIPER_TTS_SETUP.md  README.md  (+27 more)
alastor-dpet/: README.md  dpet.json
appcache/: appinfo.vdf
config/: config.vdf  libraryfolders.vdf
example-dpet/: README.md  dpet.json
libs/positioning/: Cargo.toml
libs/slu-ipc/: Cargo.toml
logs/: appinfo_log.txt  bootstrap_log.txt  cloud_log.txt  configstore_log.txt  connection_log.txt  console_log.txt  content_log.txt  shader_log.txt  workshop_log.txt
public/outputs/: workspace_output_1764784927_2080.txt  workspace_output_1764784929_3716.txt  workspace_output_1764784933_9654.txt  workspace_output_1764784935_4243.txt  workspace_output_1764784939_7503.txt  workspace_output_1764784944_6938.txt  workspace_output_1764784946_5425.txt  workspace_output_1764784948_7827.txt  workspace_output_1764784951_9320.txt  workspace_output_1764784960_6253.txt  workspace_output_1764784969_8341.txt  workspace_output_1764784974_6948.txt  workspace_output_1764784976_4518.txt  workspace_output_1764784978_2711.txt  (+7 more)
scripts/: FIX_ALL_CURSORS.bat  build_exe.py  generate_installers.py  toolbar_dev.bat
src/: App.css  App.tsx  StartScreen.css  i18n.tsx  main.tsx  styles.css
src-tauri/: .cargo-update-note.txt  Cargo.toml  LICENSE.txt  installer.nsi  tauri.conf.json
voice-lucy-assistant/: build.sh  package-lock.json
voice-lucy-assistant/src-tauri/: Cargo.toml
voice-lucy-assistant/src-tauri/src/: main.rs
voice-lucy-assistant/src-tauri/src/audio/: recorder.rs
voice-lucy-assistant/src-tauri/src/chat/: manager.rs  storage.rs
(+141 files in other folders)
