[package]
name = "voice-lucy-assistant"
version = "1.0.0"
description = "Voice-controlled AI assistant for Lucy with clap detection"
authors = ["Developer"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rodio = "0.17"
cpal = "0.15"
fundsp = "0.13"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
